# sqlx-mapping

./: .gitignore  Cargo.toml  README.md  README_zh.md
src/: cli.rs  codegen.rs  config.rs  executor.rs  main.rs  watch.rs
